[gd_scene load_steps=2 format=3 uid="uid://hdqv5rwyueit"]

[ext_resource type="Script" uid="uid://djdprvwpf1c5w" path="res://Overlap/hurtbox.gd" id="1_l5b73"]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_l5b73")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="invinciblility_ended" from="." to="." method="_on_invinciblility_ended"]
[connection signal="invinciblility_started" from="." to="." method="_on_invinciblility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
